<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:gravity="center"
        android:textSize="@dimen/textview_name"
        android:background="@color/green"
        android:textColor="@color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/textview"
            android:layout_height="wrap_content"
            android:text="@string/congviec"
            android:layout_marginRight="@dimen/right"
            android:textSize="@dimen/textview_name" />
        <EditText
            android:id="@+id/edit1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/textview"
            android:layout_height="wrap_content"
            android:text="@string/noidung"
            android:layout_marginRight="@dimen/right"
            android:textSize="@dimen/textview_name" />
        <EditText
            android:id="@+id/edit2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/ngay"
            android:layout_width="@dimen/textview"
            android:layout_height="wrap_content"
            android:text="@string/ngay"
            android:layout_marginRight="@dimen/right"
            android:textSize="@dimen/textview_name"
            android:layout_marginTop="@dimen/top"/>
        <TextView
            android:id="@+id/ngay_thang"
            android:layout_toRightOf="@+id/ngay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textview_name"
            android:text="@string/d_m_y"
            android:textColor="@color/red"
            android:layout_marginTop="@dimen/top"/>

        <Button
            android:id="@+id/btn1"
            android:layout_width="@dimen/textview"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/date"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/gio"
            android:layout_width="@dimen/textview"
            android:layout_height="wrap_content"
            android:text="@string/gio"
            android:layout_marginRight="@dimen/right"
            android:textSize="@dimen/textview_name"
            android:layout_marginTop="@dimen/top"/>
        <TextView
            android:id="@+id/thoigian"
            android:layout_toRightOf="@+id/gio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textview_name"
            android:text="@string/h_m"
            android:textColor="@color/red"
            android:layout_marginTop="@dimen/top"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="@dimen/textview"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/time"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/them"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/danhsach"
        android:textSize="@dimen/textview_name"
        android:background="@color/green"
        android:textColor="@color/white"/>
    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

</LinearLayout>